# SvcHostDemo

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/Scripts/: install.cmd  parameters.reg  start.cmd  stop.cmd  svchost.reg  uninstall.cmd
src/SvcHostDemo/: SvcHostDemo.cpp
